UI: Added Object details

--- a/imgui.ini
+++ b/imgui.ini
@@ -2,15 +2,12 @@
 Pos=60,60
 Size=400,400
 
-[Window][Demo]
-Pos=43,33
-Size=247,476
+[Window][Scene]
+Pos=-2,6
+Size=228,722
 
-[Window][Szene]
-Pos=60,60
-Size=157,499
+[Window][Objekt-Daten]
+Pos=887,4
+Size=394,722
 
-[Window][Viewport]
-Pos=302,124
-Size=109,91
 
