--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ set(IMGUI_SOURCES
         external/imgui/imgui_draw.cpp
         external/imgui/imgui_widgets.cpp
         external/imgui/imgui_tables.cpp
+        external/imgui/imgui_demo.cpp
         external/imgui/backends/imgui_impl_glfw.cpp
         external/imgui/backends/imgui_impl_opengl3.cpp
 )
@@ -61,6 +62,7 @@ add_executable(3DRenderer
         src/Renderer.cpp
         src/Camera.cpp
         src/UI.cpp
+        src/Level.cpp
 )
 
 # Include directories
