--- a/imgui.ini
+++ b/imgui.ini
@@ -1,13 +1,39 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=264,179
 Size=400,400
+Collapsed=0
 
 [Window][Scene]
-Pos=-2,6
-Size=228,722
+Pos=8,46
+Size=222,1007
+Collapsed=0
+DockId=0x00000001,0
 
 [Window][Objekt-Daten]
-Pos=887,4
-Size=394,722
+Pos=1651,46
+Size=261,1007
+Collapsed=0
+DockId=0x00000004,0
 
+[Window][DockSpace Demo]
+Size=1280,720
+Collapsed=0
+
+[Window][Viewport]
+Pos=232,46
+Size=1417,1007
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][DockSpace]
+Pos=0,19
+Size=1920,1042
+Collapsed=0
+
+[Docking][Data]
+DockSpace     ID=0x14621557 Window=0x3DA2F1DE Pos=8,46 Size=1904,1007 Split=X
+  DockNode    ID=0x00000003 Parent=0x14621557 SizeRef=1641,974 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=222,685 Selected=0xE601B12F
+    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1417,685 CentralNode=1 Selected=0xC450F867
+  DockNode    ID=0x00000004 Parent=0x14621557 SizeRef=261,974 Selected=0x6C2FEB2B
 
