--- a/imgui.ini
+++ b/imgui.ini
@@ -11,7 +11,7 @@ DockId=0x00000001,0
 
 [Window][Objekt-Daten]
 Pos=1637,46
-Size=275,1007
+Size=275,946
 Collapsed=0
 DockId=0x00000004,0
 
@@ -21,7 +21,7 @@ Collapsed=0
 
 [Window][Viewport]
 Pos=232,46
-Size=1403,1007
+Size=1351,1007
 Collapsed=0
 DockId=0x00000002,0
 
@@ -30,10 +30,18 @@ Pos=0,19
 Size=1920,1042
 Collapsed=0
 
+[Window][Inspector]
+Pos=1585,46
+Size=327,1007
+Collapsed=0
+DockId=0x00000006,0
+
 [Docking][Data]
-DockSpace     ID=0x14621557 Window=0x3DA2F1DE Pos=8,46 Size=1904,1007 Split=X
-  DockNode    ID=0x00000003 Parent=0x14621557 SizeRef=1627,974 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=222,685 Selected=0xE601B12F
-    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1403,685 CentralNode=1 Selected=0xC450F867
-  DockNode    ID=0x00000004 Parent=0x14621557 SizeRef=275,974 Selected=0x6C2FEB2B
+DockSpace       ID=0x14621557 Window=0x3DA2F1DE Pos=8,46 Size=1904,1007 Split=X
+  DockNode      ID=0x00000005 Parent=0x14621557 SizeRef=1575,1007 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1627,974 Split=X
+      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=222,685 Selected=0xE601B12F
+      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1351,685 CentralNode=1 Selected=0xC450F867
+    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=275,974 Selected=0x6C2FEB2B
+  DockNode      ID=0x00000006 Parent=0x14621557 SizeRef=327,1007 Selected=0x36DC96AB
 
