--- a/imgui.ini
+++ b/imgui.ini
@@ -4,8 +4,8 @@ Size=760,620
 Collapsed=0
 
 [Window][Scene]
-Pos=8,46
-Size=222,1007
+Pos=0,29
+Size=216,1032
 Collapsed=0
 DockId=0x00000001,0
 
@@ -20,28 +20,54 @@ Size=1280,720
 Collapsed=0
 
 [Window][Viewport]
-Pos=232,46
-Size=1351,1007
+Pos=218,29
+Size=1443,808
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000007,0
 
 [Window][DockSpace]
-Pos=0,19
-Size=1920,1042
+Pos=0,29
+Size=1920,1032
 Collapsed=0
 
 [Window][Inspector]
-Pos=1585,46
-Size=327,1007
+Pos=1663,29
+Size=257,1032
 Collapsed=0
 DockId=0x00000006,0
 
+[Window][File Browser]
+Pos=218,839
+Size=1443,222
+Collapsed=0
+DockId=0x00000008,0
+
+[Window][Model auswählen##ChooseModel]
+Pos=318,316
+Size=646,419
+Collapsed=0
+
+[Window][Textur auswählen##ChooseTexture]
+Pos=60,60
+Size=32,39
+Collapsed=0
+
+[Table][0x58D94C77,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x3943BA46,4]
+RefScale=13
+Column 0  Sort=0v
+
 [Docking][Data]
-DockSpace       ID=0x14621557 Window=0x3DA2F1DE Pos=8,46 Size=1904,1007 Split=X
-  DockNode      ID=0x00000005 Parent=0x14621557 SizeRef=1575,1007 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1627,974 Split=X
-      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=222,685 Selected=0xE601B12F
-      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1351,685 CentralNode=1 Selected=0xC450F867
-    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=275,974 Selected=0x6C2FEB2B
-  DockNode      ID=0x00000006 Parent=0x14621557 SizeRef=327,1007 Selected=0x36DC96AB
+DockSpace         ID=0x14621557 Window=0x3DA2F1DE Pos=0,29 Size=1920,1032 Split=X
+  DockNode        ID=0x00000001 Parent=0x14621557 SizeRef=216,1032 Selected=0xE601B12F
+  DockNode        ID=0x00000002 Parent=0x14621557 SizeRef=1702,1032 Split=X
+    DockNode      ID=0x00000005 Parent=0x00000002 SizeRef=1443,1042 Split=X
+      DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1627,974 Split=Y Selected=0xC450F867
+        DockNode  ID=0x00000007 Parent=0x00000003 SizeRef=1408,756 CentralNode=1 Selected=0xC450F867
+        DockNode  ID=0x00000008 Parent=0x00000003 SizeRef=1408,222 Selected=0x14395839
+      DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=275,974 Selected=0x6C2FEB2B
+    DockNode      ID=0x00000006 Parent=0x00000002 SizeRef=257,1042 Selected=0x36DC96AB
 
