--- a/imgui.ini
+++ b/imgui.ini
@@ -4,8 +4,8 @@ Size=760,620
 Collapsed=0
 
 [Window][Scene]
-Pos=0,29
-Size=216,1032
+Pos=0,36
+Size=228,973
 Collapsed=0
 DockId=0x00000001,0
 
@@ -20,25 +20,25 @@ Size=1280,720
 Collapsed=0
 
 [Window][Viewport]
-Pos=218,29
-Size=1443,808
+Pos=230,36
+Size=1406,784
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x0000000F,0
 
 [Window][DockSpace]
-Pos=0,29
-Size=1920,1032
+Pos=0,36
+Size=1920,973
 Collapsed=0
 
 [Window][Inspector]
-Pos=1663,29
-Size=257,1032
+Pos=1638,36
+Size=282,574
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000009,0
 
 [Window][File Browser]
-Pos=218,839
-Size=1443,222
+Pos=227,765
+Size=1361,244
 Collapsed=0
 DockId=0x00000008,0
 
@@ -52,6 +52,40 @@ Pos=60,60
 Size=32,39
 Collapsed=0
 
+[Window][Styling]
+Pos=1638,612
+Size=282,397
+Collapsed=0
+DockId=0x0000000A,0
+
+[Window][##MainMenuBar]
+Size=1920,29
+Collapsed=0
+
+[Window][Ordnerstruktur]
+Pos=227,757
+Size=181,252
+Collapsed=0
+DockId=0x0000000D,0
+
+[Window][Inhalt]
+Pos=410,757
+Size=1178,252
+Collapsed=0
+DockId=0x0000000E,0
+
+[Window][Directory]
+Pos=230,822
+Size=224,187
+Collapsed=0
+DockId=0x00000011,0
+
+[Window][Content]
+Pos=456,822
+Size=1180,187
+Collapsed=0
+DockId=0x00000012,0
+
 [Table][0x58D94C77,4]
 RefScale=13
 Column 0  Sort=0v
@@ -61,13 +95,23 @@ RefScale=13
 Column 0  Sort=0v
 
 [Docking][Data]
-DockSpace         ID=0x14621557 Window=0x3DA2F1DE Pos=0,29 Size=1920,1032 Split=X
-  DockNode        ID=0x00000001 Parent=0x14621557 SizeRef=216,1032 Selected=0xE601B12F
-  DockNode        ID=0x00000002 Parent=0x14621557 SizeRef=1702,1032 Split=X
-    DockNode      ID=0x00000005 Parent=0x00000002 SizeRef=1443,1042 Split=X
-      DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1627,974 Split=Y Selected=0xC450F867
-        DockNode  ID=0x00000007 Parent=0x00000003 SizeRef=1408,756 CentralNode=1 Selected=0xC450F867
-        DockNode  ID=0x00000008 Parent=0x00000003 SizeRef=1408,222 Selected=0x14395839
-      DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=275,974 Selected=0x6C2FEB2B
-    DockNode      ID=0x00000006 Parent=0x00000002 SizeRef=257,1042 Selected=0x36DC96AB
+DockSpace               ID=0x14621557 Window=0x3DA2F1DE Pos=0,36 Size=1920,973 Split=X
+  DockNode              ID=0x00000001 Parent=0x14621557 SizeRef=228,1032 Selected=0xE601B12F
+  DockNode              ID=0x00000002 Parent=0x14621557 SizeRef=1690,1032 Split=X
+    DockNode            ID=0x00000005 Parent=0x00000002 SizeRef=1406,1042 Split=X
+      DockNode          ID=0x00000003 Parent=0x00000005 SizeRef=1627,974 Split=Y Selected=0xC450F867
+        DockNode        ID=0x00000007 Parent=0x00000003 SizeRef=1317,730 Split=Y Selected=0xC450F867
+          DockNode      ID=0x0000000B Parent=0x00000007 SizeRef=1361,722 Split=Y Selected=0xC450F867
+            DockNode    ID=0x0000000F Parent=0x0000000B SizeRef=1361,784 CentralNode=1 Selected=0xC450F867
+            DockNode    ID=0x00000010 Parent=0x0000000B SizeRef=1361,187 Split=X Selected=0xE24ED91D
+              DockNode  ID=0x00000011 Parent=0x00000010 SizeRef=224,311 Selected=0x75085089
+              DockNode  ID=0x00000012 Parent=0x00000010 SizeRef=1180,311 Selected=0xE24ED91D
+          DockNode      ID=0x0000000C Parent=0x00000007 SizeRef=1361,252 Split=X Selected=0x5304B68D
+            DockNode    ID=0x0000000D Parent=0x0000000C SizeRef=181,158 Selected=0x13F24D7F
+            DockNode    ID=0x0000000E Parent=0x0000000C SizeRef=1178,158 Selected=0x5304B68D
+        DockNode        ID=0x00000008 Parent=0x00000003 SizeRef=1317,244 Selected=0x14395839
+      DockNode          ID=0x00000004 Parent=0x00000005 SizeRef=275,974 Selected=0x6C2FEB2B
+    DockNode            ID=0x00000006 Parent=0x00000002 SizeRef=282,1042 Split=Y Selected=0x36DC96AB
+      DockNode          ID=0x00000009 Parent=0x00000006 SizeRef=309,576 Selected=0x36DC96AB
+      DockNode          ID=0x0000000A Parent=0x00000006 SizeRef=309,398 Selected=0x745D1A76
 
