Ordern können hinzugefügt/gelöscht werden

--- a/imgui.ini
+++ b/imgui.ini
@@ -5,7 +5,7 @@ Collapsed=0
 
 [Window][Scene]
 Pos=0,36
-Size=249,973
+Size=195,973
 Collapsed=0
 DockId=0x00000001,0
 
@@ -20,10 +20,10 @@ Size=1280,720
 Collapsed=0
 
 [Window][Viewport]
-Pos=251,36
-Size=1311,723
+Pos=197,36
+Size=1401,743
 Collapsed=0
-DockId=0x0000000F,0
+DockId=0x00000011,0
 
 [Window][DockSpace]
 Pos=0,36
@@ -31,8 +31,8 @@ Size=1920,973
 Collapsed=0
 
 [Window][Inspector]
-Pos=1564,36
-Size=356,553
+Pos=1600,36
+Size=320,497
 Collapsed=0
 DockId=0x00000009,0
 
@@ -53,8 +53,8 @@ Size=32,39
 Collapsed=0
 
 [Window][Styling]
-Pos=1564,591
-Size=356,418
+Pos=1600,535
+Size=320,474
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -75,16 +75,16 @@ Collapsed=0
 DockId=0x0000000E,0
 
 [Window][Directory]
-Pos=251,761
-Size=205,248
+Pos=197,781
+Size=234,228
 Collapsed=0
-DockId=0x00000011,0
+DockId=0x0000000F,0
 
 [Window][Content]
-Pos=458,761
-Size=1104,248
+Pos=433,781
+Size=1165,228
 Collapsed=0
-DockId=0x00000012,0
+DockId=0x00000010,0
 
 [Table][0x58D94C77,4]
 RefScale=13
@@ -96,22 +96,22 @@ Column 0  Sort=0v
 
 [Docking][Data]
 DockSpace               ID=0x14621557 Window=0x3DA2F1DE Pos=0,36 Size=1920,973 Split=X
-  DockNode              ID=0x00000001 Parent=0x14621557 SizeRef=249,1032 Selected=0xE601B12F
-  DockNode              ID=0x00000002 Parent=0x14621557 SizeRef=1669,1032 Split=X
-    DockNode            ID=0x00000005 Parent=0x00000002 SizeRef=1311,1042 Split=X
+  DockNode              ID=0x00000001 Parent=0x14621557 SizeRef=195,973 Selected=0xE601B12F
+  DockNode              ID=0x00000002 Parent=0x14621557 SizeRef=1723,973 Split=X
+    DockNode            ID=0x00000005 Parent=0x00000002 SizeRef=1401,1042 Split=X
       DockNode          ID=0x00000003 Parent=0x00000005 SizeRef=1627,974 Split=Y Selected=0xC450F867
         DockNode        ID=0x00000007 Parent=0x00000003 SizeRef=1317,730 Split=Y Selected=0xC450F867
           DockNode      ID=0x0000000B Parent=0x00000007 SizeRef=1361,722 Split=Y Selected=0xC450F867
-            DockNode    ID=0x0000000F Parent=0x0000000B SizeRef=1361,723 CentralNode=1 Selected=0xC450F867
-            DockNode    ID=0x00000010 Parent=0x0000000B SizeRef=1361,248 Split=X Selected=0xE24ED91D
-              DockNode  ID=0x00000011 Parent=0x00000010 SizeRef=205,230 Selected=0x75085089
-              DockNode  ID=0x00000012 Parent=0x00000010 SizeRef=1104,230 Selected=0xE24ED91D
+            DockNode    ID=0x00000011 Parent=0x0000000B SizeRef=1372,743 CentralNode=1 Selected=0xC450F867
+            DockNode    ID=0x00000012 Parent=0x0000000B SizeRef=1372,228 Split=X Selected=0x75085089
+              DockNode  ID=0x0000000F Parent=0x00000012 SizeRef=234,217 Selected=0x75085089
+              DockNode  ID=0x00000010 Parent=0x00000012 SizeRef=1165,217 Selected=0xE24ED91D
           DockNode      ID=0x0000000C Parent=0x00000007 SizeRef=1361,252 Split=X Selected=0x5304B68D
             DockNode    ID=0x0000000D Parent=0x0000000C SizeRef=181,158 Selected=0x13F24D7F
             DockNode    ID=0x0000000E Parent=0x0000000C SizeRef=1178,158 Selected=0x5304B68D
         DockNode        ID=0x00000008 Parent=0x00000003 SizeRef=1317,244 Selected=0x14395839
       DockNode          ID=0x00000004 Parent=0x00000005 SizeRef=275,974 Selected=0x6C2FEB2B
-    DockNode            ID=0x00000006 Parent=0x00000002 SizeRef=356,1042 Split=Y Selected=0x36DC96AB
-      DockNode          ID=0x00000009 Parent=0x00000006 SizeRef=355,553 Selected=0x36DC96AB
-      DockNode          ID=0x0000000A Parent=0x00000006 SizeRef=355,418 Selected=0x745D1A76
+    DockNode            ID=0x00000006 Parent=0x00000002 SizeRef=320,1042 Split=Y Selected=0x36DC96AB
+      DockNode          ID=0x00000009 Parent=0x00000006 SizeRef=355,385 Selected=0x36DC96AB
+      DockNode          ID=0x0000000A Parent=0x00000006 SizeRef=355,367 Selected=0x745D1A76
 
