Content Tab with Breadcrumbs, Previous Folder and Icons

--- a/imgui.ini
+++ b/imgui.ini
@@ -5,7 +5,7 @@ Collapsed=0
 
 [Window][Scene]
 Pos=0,36
-Size=195,973
+Size=219,973
 Collapsed=0
 DockId=0x00000001,0
 
@@ -20,8 +20,8 @@ Size=1280,720
 Collapsed=0
 
 [Window][Viewport]
-Pos=197,36
-Size=1401,743
+Pos=221,36
+Size=1377,684
 Collapsed=0
 DockId=0x00000011,0
 
@@ -75,14 +75,14 @@ Collapsed=0
 DockId=0x0000000E,0
 
 [Window][Directory]
-Pos=197,781
-Size=234,228
+Pos=221,722
+Size=219,287
 Collapsed=0
 DockId=0x0000000F,0
 
 [Window][Content]
-Pos=433,781
-Size=1165,228
+Pos=442,722
+Size=1156,287
 Collapsed=0
 DockId=0x00000010,0
 
@@ -94,18 +94,24 @@ Column 0  Sort=0v
 RefScale=13
 Column 0  Sort=0v
 
+[Table][0xAF5C1848,3]
+RefScale=16
+Column 0  Weight=1.0000
+Column 1  Width=60
+Column 2  Width=80
+
 [Docking][Data]
 DockSpace               ID=0x14621557 Window=0x3DA2F1DE Pos=0,36 Size=1920,973 Split=X
-  DockNode              ID=0x00000001 Parent=0x14621557 SizeRef=195,973 Selected=0xE601B12F
-  DockNode              ID=0x00000002 Parent=0x14621557 SizeRef=1723,973 Split=X
-    DockNode            ID=0x00000005 Parent=0x00000002 SizeRef=1401,1042 Split=X
+  DockNode              ID=0x00000001 Parent=0x14621557 SizeRef=219,973 Selected=0xE601B12F
+  DockNode              ID=0x00000002 Parent=0x14621557 SizeRef=1699,973 Split=X
+    DockNode            ID=0x00000005 Parent=0x00000002 SizeRef=1377,1042 Split=X
       DockNode          ID=0x00000003 Parent=0x00000005 SizeRef=1627,974 Split=Y Selected=0xC450F867
         DockNode        ID=0x00000007 Parent=0x00000003 SizeRef=1317,730 Split=Y Selected=0xC450F867
           DockNode      ID=0x0000000B Parent=0x00000007 SizeRef=1361,722 Split=Y Selected=0xC450F867
-            DockNode    ID=0x00000011 Parent=0x0000000B SizeRef=1372,743 CentralNode=1 Selected=0xC450F867
-            DockNode    ID=0x00000012 Parent=0x0000000B SizeRef=1372,228 Split=X Selected=0x75085089
-              DockNode  ID=0x0000000F Parent=0x00000012 SizeRef=234,217 Selected=0x75085089
-              DockNode  ID=0x00000010 Parent=0x00000012 SizeRef=1165,217 Selected=0xE24ED91D
+            DockNode    ID=0x00000011 Parent=0x0000000B SizeRef=1372,684 CentralNode=1 Selected=0xC450F867
+            DockNode    ID=0x00000012 Parent=0x0000000B SizeRef=1372,287 Split=X Selected=0x75085089
+              DockNode  ID=0x0000000F Parent=0x00000012 SizeRef=219,217 Selected=0x75085089
+              DockNode  ID=0x00000010 Parent=0x00000012 SizeRef=1156,217 Selected=0xE24ED91D
           DockNode      ID=0x0000000C Parent=0x00000007 SizeRef=1361,252 Split=X Selected=0x5304B68D
             DockNode    ID=0x0000000D Parent=0x0000000C SizeRef=181,158 Selected=0x13F24D7F
             DockNode    ID=0x0000000E Parent=0x0000000C SizeRef=1178,158 Selected=0x5304B68D
