--- a/imgui.ini
+++ b/imgui.ini
@@ -5,7 +5,7 @@ Collapsed=0
 
 [Window][Scene]
 Pos=0,36
-Size=219,973
+Size=226,973
 Collapsed=0
 DockId=0x00000001,0
 
@@ -20,10 +20,10 @@ Size=1280,720
 Collapsed=0
 
 [Window][Viewport]
-Pos=221,36
-Size=1377,684
+Pos=228,36
+Size=1279,679
 Collapsed=0
-DockId=0x00000011,0
+DockId=0x00000013,0
 
 [Window][DockSpace]
 Pos=0,36
@@ -31,8 +31,8 @@ Size=1920,973
 Collapsed=0
 
 [Window][Inspector]
-Pos=1600,36
-Size=320,497
+Pos=1509,36
+Size=411,497
 Collapsed=0
 DockId=0x00000009,0
 
@@ -53,8 +53,8 @@ Size=32,39
 Collapsed=0
 
 [Window][Styling]
-Pos=1600,535
-Size=320,474
+Pos=1509,535
+Size=411,474
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -75,16 +75,22 @@ Collapsed=0
 DockId=0x0000000E,0
 
 [Window][Directory]
-Pos=221,722
-Size=219,287
+Pos=236,669
+Size=1200,340
 Collapsed=0
 DockId=0x0000000F,0
 
 [Window][Content]
-Pos=442,722
-Size=1156,287
+Pos=442,669
+Size=994,340
 Collapsed=0
 DockId=0x00000010,0
+
+[Window][Assets]
+Pos=228,717
+Size=1279,292
+Collapsed=0
+DockId=0x00000014,0
 
 [Table][0x58D94C77,4]
 RefScale=13
@@ -102,22 +108,24 @@ Column 2  Width=80
 
 [Docking][Data]
 DockSpace               ID=0x14621557 Window=0x3DA2F1DE Pos=0,36 Size=1920,973 Split=X
-  DockNode              ID=0x00000001 Parent=0x14621557 SizeRef=219,973 Selected=0xE601B12F
-  DockNode              ID=0x00000002 Parent=0x14621557 SizeRef=1699,973 Split=X
-    DockNode            ID=0x00000005 Parent=0x00000002 SizeRef=1377,1042 Split=X
+  DockNode              ID=0x00000001 Parent=0x14621557 SizeRef=226,973 Selected=0xE601B12F
+  DockNode              ID=0x00000002 Parent=0x14621557 SizeRef=1692,973 Split=X
+    DockNode            ID=0x00000005 Parent=0x00000002 SizeRef=1279,1042 Split=X
       DockNode          ID=0x00000003 Parent=0x00000005 SizeRef=1627,974 Split=Y Selected=0xC450F867
         DockNode        ID=0x00000007 Parent=0x00000003 SizeRef=1317,730 Split=Y Selected=0xC450F867
           DockNode      ID=0x0000000B Parent=0x00000007 SizeRef=1361,722 Split=Y Selected=0xC450F867
-            DockNode    ID=0x00000011 Parent=0x0000000B SizeRef=1372,684 CentralNode=1 Selected=0xC450F867
-            DockNode    ID=0x00000012 Parent=0x0000000B SizeRef=1372,287 Split=X Selected=0x75085089
-              DockNode  ID=0x0000000F Parent=0x00000012 SizeRef=219,217 Selected=0x75085089
-              DockNode  ID=0x00000010 Parent=0x00000012 SizeRef=1156,217 Selected=0xE24ED91D
+            DockNode    ID=0x00000011 Parent=0x0000000B SizeRef=1372,631 Split=Y Selected=0xC450F867
+              DockNode  ID=0x00000013 Parent=0x00000011 SizeRef=1279,679 CentralNode=1 Selected=0xC450F867
+              DockNode  ID=0x00000014 Parent=0x00000011 SizeRef=1279,292 Selected=0x42C24103
+            DockNode    ID=0x00000012 Parent=0x0000000B SizeRef=1372,340 Split=X Selected=0x75085089
+              DockNode  ID=0x0000000F Parent=0x00000012 SizeRef=204,217 Selected=0x75085089
+              DockNode  ID=0x00000010 Parent=0x00000012 SizeRef=994,217 Selected=0xE24ED91D
           DockNode      ID=0x0000000C Parent=0x00000007 SizeRef=1361,252 Split=X Selected=0x5304B68D
             DockNode    ID=0x0000000D Parent=0x0000000C SizeRef=181,158 Selected=0x13F24D7F
             DockNode    ID=0x0000000E Parent=0x0000000C SizeRef=1178,158 Selected=0x5304B68D
         DockNode        ID=0x00000008 Parent=0x00000003 SizeRef=1317,244 Selected=0x14395839
       DockNode          ID=0x00000004 Parent=0x00000005 SizeRef=275,974 Selected=0x6C2FEB2B
-    DockNode            ID=0x00000006 Parent=0x00000002 SizeRef=320,1042 Split=Y Selected=0x36DC96AB
+    DockNode            ID=0x00000006 Parent=0x00000002 SizeRef=411,1042 Split=Y Selected=0x36DC96AB
       DockNode          ID=0x00000009 Parent=0x00000006 SizeRef=355,385 Selected=0x36DC96AB
       DockNode          ID=0x0000000A Parent=0x00000006 SizeRef=355,367 Selected=0x745D1A76
 
